<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenshot_2023_05_22_173653"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display_bold"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingTop="50dp"
        android:paddingRight="30dp"
        android:paddingBottom="5dp"
        android:text="@string/header"
        android:textAllCaps="true"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display_bold_italic"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:text="@string/text"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textViewc346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/baseline_library_books_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/c346"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewC286"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/baseline_library_books_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/c286"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewC303"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/baseline_library_books_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/c303"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewC300"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/baseline_library_books_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/crimson_text_bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/c300"
        android:textSize="18sp" />

</LinearLayout>